--- a/CSS/UserPage.css
+++ b/CSS/UserPage.css
@@ -9,7 +9,7 @@
 }
 body {
     font-family: Arial, sans-serif;
-    background-color: var(--cream);
+    background-color: #F9F7EB;
     color: var(--text-color);
 }
 .UserPage main {
