--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
+    font-family: Arial, sans-serif;
  }
  body{
     background-color: #F7F4EF;
@@ -14,7 +14,6 @@
  }
     header{
         background-color: #681f42;
-;
         background-image: url("../images/food.jpg");
         background-size: cover;
         background-repeat: no-repeat;
@@ -30,6 +29,9 @@
         height: 100px;
         vertical-align: middle;
         margin-right: 10px;
+        background-color:#ede7e3;
+        border-radius: 50%;
+;
     }
     .logo{
         display: flex;
@@ -56,8 +58,7 @@
     gap: 20px;
     }
     nav a{
-        font-family: 'Inter', sans-serif;
-
+        font-family: Arial, sans-serif;
         color: #F5EFE6;
         font-weight: 500;
         text-decoration: none;
