--- a/CSS/Admin.css
+++ b/CSS/Admin.css
@@ -33,12 +33,20 @@ body{
 }
 
 .LogOutAdmin{
+   float: right;
+    font-size: 16px;
     text-decoration: none;
     font-weight: bold;
     color: var(--light-cream);
     background-color: var(--text-color);
     padding: 10px 20px;
     border-radius: 20px;
+    transition: .3s;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+}
+.LogOutAdmin:hover{
+     background-color: var(--soft-mint);
+    transform: translateY(-4px);
 }
 
 /* Cards */
@@ -95,4 +103,18 @@ body{
     border-radius: 15px;
     font-weight: bold;
     cursor: pointer;
+}
+.RecipeURL{
+    font-size: larger;
+    text-decoration: none;
+    font-weight: bolder;
+    color: var(--text-color);
+    transition: .3s;
+    border-radius: 30px;
+}
+
+.RecipeURL:hover {
+    color:var(--soft-mint);
+    text-decoration: underline;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
 }
