--- a/CSS/ViewRecipe.css
+++ b/CSS/ViewRecipe.css
@@ -1,4 +1,4 @@
-/* View Recipe page CSS (matches UserPage theme) */
+/* View Recipe page CSS  */
 :root{
   --text-color: #681F42;
   --soft-mint:#C67154;
